# hot_potato_agent

./: .gitignore  fsm_specification.yaml  pyproject.toml
hot_potato_agent/: README.md  aea-config.yaml
myenv/: pyvenv.cfg
